# CCLAgent

./: .gitignore  .gitmodules  1  README  README.md
configs/: agentic_showcase_kimi.json  sim_long.json
cpp/: CMakeLists.txt
cpp/common/: ipc_common.cc  ipc_common.h  json.hpp
cpp/nccl_profiler_plugin/: CMakeLists.txt  profiler_plugin.cc  profiler_plugin.h
cpp/nccl_tuner_plugin/: CMakeLists.txt  tuner_plugin.cc  tuner_plugin.h
doc/: polaris_cluster_info_commands.md
memory/: agent_memory.json  rules.jsonl
scripts/: agent_torchrun_demo.sh  agent_tui.py  build_plugins.sh  build_rag_index.py  ci_build_plugins.sh  ci_smoke_nccltests.sh  export_rl_dataset.py  export_run_report.py  export_sft_dataset.py  ext_tuner_client.py  polaris_autoccl_example.pbs  replay_trace.py  run_agent_torch_demo.sh  run_agentic_showcase_kimi.sh  run_autoccl_example.sh  run_benchmark_matrix.sh  run_cclinsight_microbench.sh  run_monitor.py  run_tests.sh  train_surrogate.py  tui_web.sh  validate_artifacts.py  validate_run_dir.py
src/: __init__.py  config.py  main.py  memory.py  runner.py  types.py
tests/: test_agent_runtime_commands.py  test_analyzer_action_selection.py  test_attribution.py  test_config_compiler_env.py  test_config_validation.py  test_convergence_argument.py  test_decision_bundle_refs.py  test_decision_engine_rule_first.py  test_digital_twin.py  test_failure_mode_detector.py  test_hypothesis_summary_specificity.py  test_hypothesis_tracker.py  test_llm_influence.py  test_llm_output_strict_validation.py  test_llm_schemas.py  test_memory_retrieval_scoring.py  test_replay.py  (+21 more)
(+303 files in other folders)
